logs/region_growing_rgb/build.make.086.log.stderr
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp: In function ‘void cloud_cb(pcl::PointCloud<pcl::PointXYZRGB>::Ptr)’:
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:114:37: error: base operand of ‘->’ has non-pointer type ‘pcl::PointCloud<pcl::PointXYZRGB>’
     for(int i = 0; i < objectCenters->points.size(); i++){
                                     ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:116:45: error: base operand of ‘->’ has non-pointer type ‘pcl::PointCloud<pcl::PointXYZRGB>’
   if (pclCloud->points[j].r == objectCenters->points[i].r &&
                                             ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:117:41: error: base operand of ‘->’ has non-pointer type ‘pcl::PointCloud<pcl::PointXYZRGB>’
   pclCloud->points[j].g == objectCenters->points[i].g &&
                                         ^
/home/dan/dan_ws/src/region_growing_rgb/src/kinect_segmentation.cpp:118:41: error: base operand of ‘->’ has non-pointer type ‘pcl::PointCloud<pcl::PointXYZRGB>’
   pclCloud->points[j].b == objectCenters->points[i].b)
                                         ^
make[2]: *** [CMakeFiles/kinect_segmentation.dir/src/kinect_segmentation.cpp.o] Error 1
make[1]: *** [CMakeFiles/kinect_segmentation.dir/all] Error 2
make: *** [all] Error 2
